--- a/templates/base.html
+++ b/templates/base.html
@@ -18,7 +18,7 @@
     </script>
     <!-- Fengyuan Chen's Datepicker -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/datepicker/0.6.5/datepicker.min.css"
-        integrity="sha256-b88RdwbRJEzRx95nCuuva+hO5ExvXXnpX+78h8DjyOE=" crossorigin="anonymous" />
+        integrity="sha256-b88RdwbRJEzRx95nCuuva+hO5ExvXXnpX+78h8DjyOE=" crossorigin="anonymous">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/datepicker/0.6.5/datepicker.min.js"
         integrity="sha256-/7FLTdzP6CfC1VBAj/rsp3Rinuuu9leMRGd354hvk0k=" crossorigin="anonymous"></script>
 </head>
@@ -84,34 +84,33 @@
 
     </main>
 
-    <footer class="mt-4" style="background-color: rgba(0, 0, 0, 0.2); min-height:150px;">
+    <footer class="mt-4 px-1" style="background-color: rgba(0, 0, 0, 0.2); min-height:150px;">
         <div class="container p-4 pb-0 text-center">
           <a href="{% url 'homepage' %}" aria-label="Return to homepage">
             <span class="footer-font">Avec Plaisir</span>
           </a>
         </div>
-        <section class="mb-4 d-flex flex-wrap justify-content-center">
+        <div class="mb-4 d-flex flex-wrap justify-content-center">
           <a class="m-1 d-block" href="https://goo.gl/maps/WZmoB6TjqAw6aZYA8"
           target="_blank" rel="noopener" aria-label="Find us on Google maps (opens in a new tab)">
-              <span class="footer-logo mr-2"><i class="fas fa-map-pin"></i> Charlotte Street, London, W1</a>
-          <a class="m-1 d-block" href="tel:020 7123 4567" target="_blank" rel="noopener"
-            aria-label="Call us on 020 7123 4567" >
+              <span class="footer-logo mr-2"><i class="fas fa-map-pin"></i> Charlotte Street, London, W1</span></a>
+          <a class="m-1 d-block" href="tel:02071234567" target="_blank" rel="noopener" aria-label="Call us on 02071234567">
               <span class="footer-logo mr-2"><i class="fas fa-phone"></i> 0207 123 4567</span></a>
           <div class="d-flex justify-content-center">
             <a class="m-1" href="mailto:bookings@avecplaisir.com" target="_blank" rel="noopener"
             aria-label="Email us at bookings@avecplaisir.com">
                 <span class="footer-logo mr-2"><i class="fa-solid fa-envelope fa-lg"></i></span></a>
-            <a class="m-1" href="https://www.facebook.com/" aria-label="Contact us on Facebook" target="_blank" rel="noopener"
+            <a class="m-1" href="https://www.facebook.com/" target="_blank" rel="noopener"
                 aria-label="Follow us on Facebook (opens in a new tab)">
                 <span class="footer-logo mr-2"><i class="fa-brands fa-facebook-square fa-lg"></i></span></a>
-            <a class="m-1" href="https://www.instagram.com/" aria-label="Contact us on Instagram" target="_blank" rel="noopener"
+            <a class="m-1" href="https://www.instagram.com/" target="_blank" rel="noopener"
                 aria-label="Follow us on Instagram (opens in a new tab)">
                 <span class="footer-logo mr-2"><i class="fa-brands fa-instagram-square fa-lg"></i></span></a>
-            <a class="m-1" href="https://www.twitter.com/" aria-label="Contact us on Twitter" target="_blank" rel="noopener"
+            <a class="m-1" href="https://www.twitter.com/" target="_blank" rel="noopener"
                 aria-label="Follow us on Twitter (opens in a new tab)">
                 <span class="footer-logo mr-2"><i class="fa-brands fa-twitter-square fa-lg"></i></span></a>
           </div>
-        </section>
+        </div>
       </footer>
       
       
