--- a/templates/base.html
+++ b/templates/base.html
@@ -86,36 +86,33 @@
 
     <footer class="mt-4 px-1" style="background-color: rgba(0, 0, 0, 0.2); min-height:150px;">
         <div class="container p-4 pb-0 text-center">
-          <a href="{% url 'homepage' %}" aria-label="Return to homepage">
-            <span class="footer-font">Avec Plaisir</span>
-          </a>
+            <a href="{% url 'homepage' %}" aria-label="Return to homepage">
+                <span class="footer-font">Avec Plaisir</span>
+            </a>
         </div>
         <div class="mb-4 d-flex flex-wrap justify-content-center">
-          <a class="m-1 d-block" href="https://goo.gl/maps/WZmoB6TjqAw6aZYA8"
-          target="_blank" rel="noopener" aria-label="Find us on Google maps (opens in a new tab)">
-              <span class="footer-logo mr-2"><i class="fas fa-map-pin"></i> Charlotte Street, London, W1</span></a>
-          <a class="m-1 d-block" href="tel:02071234567" target="_blank" rel="noopener" aria-label="Call us on 02071234567">
-              <span class="footer-logo mr-2"><i class="fas fa-phone"></i> 0207 123 4567</span></a>
-          <div class="d-flex justify-content-center">
-            <a class="m-1" href="mailto:bookings@avecplaisir.com" target="_blank" rel="noopener"
-            aria-label="Email us at bookings@avecplaisir.com">
-                <span class="footer-logo mr-2"><i class="fa-solid fa-envelope fa-lg"></i></span></a>
-            <a class="m-1" href="https://www.facebook.com/" target="_blank" rel="noopener"
-                aria-label="Follow us on Facebook (opens in a new tab)">
-                <span class="footer-logo mr-2"><i class="fa-brands fa-facebook-square fa-lg"></i></span></a>
-            <a class="m-1" href="https://www.instagram.com/" target="_blank" rel="noopener"
-                aria-label="Follow us on Instagram (opens in a new tab)">
-                <span class="footer-logo mr-2"><i class="fa-brands fa-instagram-square fa-lg"></i></span></a>
-            <a class="m-1" href="https://www.twitter.com/" target="_blank" rel="noopener"
-                aria-label="Follow us on Twitter (opens in a new tab)">
-                <span class="footer-logo mr-2"><i class="fa-brands fa-twitter-square fa-lg"></i></span></a>
-          </div>
+            <a class="m-1 d-block" href="https://goo.gl/maps/WZmoB6TjqAw6aZYA8" target="_blank" rel="noopener"
+                aria-label="Find us on Google maps (opens in a new tab)">
+                <span class="footer-logo mr-2"><i class="fas fa-map-pin"></i> Charlotte Street, London, W1</span></a>
+            <a class="m-1 d-block" href="tel:02071234567" target="_blank" rel="noopener"
+                aria-label="Call us on 02071234567">
+                <span class="footer-logo mr-2"><i class="fas fa-phone"></i> 0207 123 4567</span></a>
+            <div class="d-flex justify-content-center">
+                <a class="m-1" href="mailto:bookings@avecplaisir.com" target="_blank" rel="noopener"
+                    aria-label="Email us at bookings@avecplaisir.com">
+                    <span class="footer-logo mr-2"><i class="fa-solid fa-envelope fa-lg"></i></span></a>
+                <a class="m-1" href="https://www.facebook.com/" target="_blank" rel="noopener"
+                    aria-label="Follow us on Facebook (opens in a new tab)">
+                    <span class="footer-logo mr-2"><i class="fa-brands fa-facebook-square fa-lg"></i></span></a>
+                <a class="m-1" href="https://www.instagram.com/" target="_blank" rel="noopener"
+                    aria-label="Follow us on Instagram (opens in a new tab)">
+                    <span class="footer-logo mr-2"><i class="fa-brands fa-instagram-square fa-lg"></i></span></a>
+                <a class="m-1" href="https://www.twitter.com/" target="_blank" rel="noopener"
+                    aria-label="Follow us on Twitter (opens in a new tab)">
+                    <span class="footer-logo mr-2"><i class="fa-brands fa-twitter-square fa-lg"></i></span></a>
+            </div>
         </div>
-      </footer>
-      
-      
-      
-
+    </footer>
 
     <!-- Font awesome -->
     <script src="https://kit.fontawesome.com/ad363e4e3e.js" crossorigin="anonymous"></script>
@@ -127,7 +124,7 @@
     </script>
 
     <!-- script for active class -->
-
+    
     <script>
         $(document).ready(function () {
             var path = window.location.pathname;
@@ -136,7 +133,6 @@
             }).addClass("active");
         });
     </script>
-
 
 </body>
 
