--- a/static/css/style.css
+++ b/static/css/style.css
@@ -94,18 +94,17 @@ form {
 /*  4. Footer */
 footer {
     border-top: 1px solid #efd485;
-    font: #efd485;
+    color: #efd485;
 }
 
-.footer-font {
+a .footer-font {
     color: #efd485;
     font-family: "Allura", cursive;
     font-size: 30px;
 }
 
-.footer-font-two {
-    font-family: "Lato", sans-serif;
-    font-size: 20px;
+.footer-two {
+    color:#efd485;
 }
 
 /* 5. menus.html page */
