--- a/templates/base.html
+++ b/templates/base.html
@@ -34,13 +34,14 @@
         <div class="collapse navbar-collapse justify-content-left" id="navbarNavDropdown">
             <ul class="navbar-nav justify-content-right">
                 <li class="nav-item">
-                    <a class="nav-link" aria-current="page" href="{% url 'homepage' %}"><span
-                            class="nav-colors">Home</span></a>
+                    <a class="nav-link" aria-current="page" href="{% url 'homepage' %}">
+                        <span class="nav-colors">Home</span></a>
                 </li>
-                <li class="dropdown-item"><a class="nav-link" href="{% url 'menus' %}"><span
-                            class="nav-colors">Menus</span></a>
-                <li class="dropdown-item"><a class="nav-link" href="{% url 'create_reservation' %}"><span
-                            class="nav-colors">Book a Table</span></a>
+                <li class="dropdown-item"><a class="nav-link" href="{% url 'menus' %}">
+                    <span class="nav-colors">Menus</span></a>
+                </li>
+                <li class="dropdown-item"><a class="nav-link" href="{% url 'create_reservation' %}">
+                    <span class="nav-colors">Book a Table</span></a>
                 </li>
                 {% if user.is_authenticated %}
                 <li class="dropdown-item"><a class="nav-link" href="{% url 'view_reservations' %}"><span
@@ -91,25 +92,25 @@
             </a>
         </div>
         <div class="mb-4 d-flex flex-wrap justify-content-center">
-            <a class="m-1 d-block" href="https://goo.gl/maps/WZmoB6TjqAw6aZYA8" target="_blank" rel="noopener"
+            <a class="m-1 d-block footer-two" href="https://goo.gl/maps/WZmoB6TjqAw6aZYA8" target="_blank" rel="noopener"
                 aria-label="Find us on Google maps (opens in a new tab)">
-                <span class="footer-logo mr-2"><i class="fas fa-map-pin"></i> Charlotte Street, London, W1</span></a>
-            <a class="m-1 d-block" href="tel:02071234567" target="_blank" rel="noopener"
+                <span class="mr-2 footer-two"><i class="fas fa-map-pin"></i> Charlotte Street, London, W1</span></a>
+            <a class="m-1 d-block footer-two " href="tel:02071234567" target="_blank" rel="noopener"
                 aria-label="Call us on 02071234567">
-                <span class="footer-logo mr-2"><i class="fas fa-phone"></i> 0207 123 4567</span></a>
+                <i class="fas fa-phone"></i> 0207 123 4567</a>
             <div class="d-flex justify-content-center">
                 <a class="m-1" href="mailto:bookings@avecplaisir.com" target="_blank" rel="noopener"
                     aria-label="Email us at bookings@avecplaisir.com">
-                    <span class="footer-logo mr-2"><i class="fa-solid fa-envelope fa-lg"></i></span></a>
+                    <span class="footer-two mr-2"><i class="fa-solid fa-envelope fa-lg"></i></span></a>
                 <a class="m-1" href="https://www.facebook.com/" target="_blank" rel="noopener"
                     aria-label="Follow us on Facebook (opens in a new tab)">
-                    <span class="footer-logo mr-2"><i class="fa-brands fa-facebook-square fa-lg"></i></span></a>
+                    <span class="footer-two mr-2"><i class="fa-brands fa-facebook-square fa-lg"></i></span></a>
                 <a class="m-1" href="https://www.instagram.com/" target="_blank" rel="noopener"
                     aria-label="Follow us on Instagram (opens in a new tab)">
-                    <span class="footer-logo mr-2"><i class="fa-brands fa-instagram-square fa-lg"></i></span></a>
+                    <span class="footer-two mr-2"><i class="fa-brands fa-instagram-square fa-lg"></i></span></a>
                 <a class="m-1" href="https://www.twitter.com/" target="_blank" rel="noopener"
                     aria-label="Follow us on Twitter (opens in a new tab)">
-                    <span class="footer-logo mr-2"><i class="fa-brands fa-twitter-square fa-lg"></i></span></a>
+                    <span class="footer-two mr-2"><i class="fa-brands fa-twitter-square fa-lg"></i></span></a>
             </div>
         </div>
     </footer>
