Add right margin to navbar

--- a/bookings/templates/bookings/bookings.html
+++ b/bookings/templates/bookings/bookings.html
@@ -12,7 +12,8 @@
   <p>Please <a href="tel:020 7123 4567">call</a>
     or <a href="mailto:bookings@avecplaisir.com"
     aria-label="Email us at bookings@avecplaisir.com">email</a> 
-    the restaurant for parties of more than 8 guests.</p>
+    the restaurant for parties of more than 8 guests, <br>
+    or for same day reservations.</p>
   <form method="POST" autocomplete="off">
     {{ form | crispy}}
     {% csrf_token %}
