--- a/templates/base.html
+++ b/templates/base.html
@@ -25,7 +25,7 @@
 
 <body>
     <!-- Nav Bar-->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-transparent ps-4">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-transparent px-3">
         <a class="navbar-brand" href="{% url 'homepage' %}"><span id="logo">A</span></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
             aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
