Add spaces to menus/views for pep8 compliance

--- a/menus/templates/menus/menus.html
+++ b/menus/templates/menus/menus.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 
-<section class="menus pb-4" id="menus">
+<section class="menus pb-4">
   <h1>Our Menus</h1>
 </section>
 <div class="container pb-4">
