--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Allura&family=Lato&display=swap');
 
-/* Base.html page and common to all pages */
+/* 1. Base.html page and common to all pages */
 
 body {
     background-color: #645132;
@@ -18,15 +18,7 @@ a {
 a:hover {
     color:#efd485;
 }
-
-.btn {
-    margin-top: 20px;
-    color: #efd485;
-    border-color: #efd485;
-    background-color: #6c5736;
-}
-
-/* navbar */
+/* 2. navbar */
 .navbar {
     z-index: 10;
     color: #efd485;
@@ -43,11 +35,12 @@ a:hover {
     padding-left: 20px;
 }
 
-/* index.html hero image and text overlay */
+/* 3. hero image and text overlay */
 #logo-text {
     font-family: 'Allura', cursive;
     font-size: 80px;
 }
+
 
 .hero-image {
     z-index: 2;
@@ -75,7 +68,7 @@ a:hover {
 .cover-text-inner {
     text-align: center;
 }
-h1, h2, h3, h4, p {
+h1, h2, h3, h4, p, q  {
     color: #efd485;
 }
 
@@ -83,21 +76,22 @@ h2 {
     font-size: 30px;
 }
 
-.quotes {
-    font-size: 16px;
+.btn {
+    margin-top: 20px;
+    color: #efd485;
+    border-color: #efd485;
+    background-color: #6c5736;
 }
 
-.wine-img {
-    max-width:80%; 
+.card p {
+    color: black;
 }
-
-/* bookings.html */
 
 form {
     color: #efd485;
 }
 
-/* Footer */
+/*  4. Footer */
 footer {
     border-top: 1px solid #efd485;
     color: #efd485;
@@ -113,11 +107,14 @@ a .footer-font {
     color:#efd485;
 }
 
-/* 5. Menu pages */
+/* 5. menus.html page */
 
-.menu-page {
-    max-width: 600px;
+.menus {
+    padding-top: 20px;
+    display: flex;
+    justify-content: center;
 }
+
 
 .card {
     background: #efd485;
@@ -128,13 +125,23 @@ p.card-text {
     color: black;
 }
 
+#customForm {
+    background-color: #efd485;
+}
+
+
+.wine-img {
+    max-width:50%; 
+}
+
+.quotes {
+    font-size: 16px;
+}
+
 form {
     max-width: 600px;
 } 
 
-.menus {
-    padding-top: 20px;
-    display: flex;
-    justify-content: center;
+.menu-page {
+    max-width: 600px;
 }
-
