Fix html errors on menu pages

--- a/menus/templates/menus/breakfast.html
+++ b/menus/templates/menus/breakfast.html
@@ -1,48 +1,53 @@
 {% extends "base.html" %}
 
 {% block content %}
-
+<!-- Menu block content -->
 <div class="container menu-page">
-    <div class="row d-flex justify-content-center">
-      <div class="col-10 pb-5 text-center">
-        <h1 class="quicksand-font header text-uppercase">Morning Glories!</h1>
-        <p class="text-center">Served from 10:00 - 12:00 daily.<br>
-        Remember to check out our <a href="{% url 'lunch' %}">lunch</a> and <a href="{% url 'dinner' %}">dinner</a> menus.</p>
-        <hr>
-      </div>
+  <!-- menu title - breakfast "morning glories" -->
+  <div class="row d-flex justify-content-center">
+    <div class="col-10 pb-5 text-center">
+      <h1 class="quicksand-font header text-uppercase">Morning Glories!</h1>
+      <p class="text-center">Served from 10:00 - 12:00 daily.<br>
+        Remember to check out our <a href="{% url 'lunch' %}">lunch</a> and <a href="{% url 'dinner' %}">dinner</a>
+        menus.</p>
+      <hr>
     </div>
-    <div class="row d-flex justify-content-center">
-      <div class="col-10 pb-5 text-center">
-        <h2 class="text-center quicksand-font text-uppercase">Bread & Pastries</h4><br>
-        <h4>Pain Perdu</h4>
-        <p>French Toast made with brioche, served with strawberries, banana and blueberries.
-          Choose between chocolate sauce, Canadian maple syrup or Greek yogurt.<br>
-          £10.95 </p>
-        <h4>Crepes</h4>
-        <p>Check out our board for the savoury and sweet options of the day, or choose your favorite
-          fillings.<br>
-          £5.00 - £15.50 </p>
-        <h4>Viennoiseries</h4>
-        <p>All of our pastries are served with jams and spreads. Choose from croissant,
-          almond croissant, pain au chocolat, pain au raisin and cinnamon swirl. <br>
-          £3.50 </p>
-      </div>
+  </div>
+  <!-- Menu category -->
+  <div class="row d-flex justify-content-center">
+    <div class="col-10 pb-5 text-center">
+      <h2 class="text-center quicksand-font text-uppercase">Bread & Pastries</h2><br>
+      <h4>Pain Perdu</h4>
+      <p>French Toast made with brioche, served with strawberries, banana and blueberries.
+        Choose between chocolate sauce, Canadian maple syrup or Greek yogurt.<br>
+        £10.95 </p>
+      <h4>Crepes</h4>
+      <p>Check out our board for the savoury and sweet options of the day, or choose your favorite
+        fillings.<br>
+        £5.00 - £15.50 </p>
+      <h4>Viennoiseries</h4>
+      <p>All of our pastries are served with jams and spreads. Choose from croissant,
+        almond croissant, pain au chocolat, pain au raisin and cinnamon swirl. <br>
+        £3.50 </p>
     </div>
-    <div class="row d-flex justify-content-center">
-      <div class="col-10 pb-5 text-center">
-        <h2 class="text-center quicksand-font text-uppercase">Cereals, Fruit & Yogurt</h4><br>
-        <h4>Porridge</h4>
-        <p>Scottish rolled oats with an apple and pear compote, dried fruits and nuts.<br>
-          £7.95 </p>
-        <h4>Muesli</h4>
-        <p>Served with Greek yogurt, apple and pear compote and seasonal fruits <br>
-          £7.95 </p>
-      </div>
+  </div>
+  <!-- Next menu category -->
+  <div class="row d-flex justify-content-center">
+    <div class="col-10 pb-5 text-center">
+      <h2 class="text-center quicksand-font text-uppercase">Cereals, Fruit & Yogurt</h2><br>
+      <h4>Porridge</h4>
+      <p>Scottish rolled oats with an apple and pear compote, dried fruits and nuts.<br>
+        £7.95 </p>
+      <h4>Muesli</h4>
+      <p>Served with Greek yogurt, apple and pear compote and seasonal fruits <br>
+        £7.95 </p>
     </div>
-    <div class="row d-flex justify-content-center">
-      <div class="col-10 pb-5 text-center">
-        <h2 class="text-center quicksand-font text-uppercase">Tartines</h4>
-          <p>Served on sourdough bread</p><br>
+  </div>
+  <!-- Next menu category -->
+  <div class="row d-flex justify-content-center">
+    <div class="col-10 pb-5 text-center">
+      <h2 class="text-center quicksand-font text-uppercase">Tartines</h4>
+        <p>Served on sourdough bread</p><br>
         <h4>Smoked Salmon</h4>
         <p>Served with butter, pickled cucumber, radishes and dill dressing.<br>
           £12.95 </p>
@@ -52,27 +57,29 @@
         <h4>Croque Monsieur</h4>
         <p>Served with ham and cheese, served with a green salad. <br>
           £7.95 </p>
-      </div>
     </div>
-    <div class="row d-flex justify-content-center">
-      <div class="col-10 pb-5 text-center">
-        <h2 class="text-center quicksand-font text-uppercase">Organic Eggs</h4>
-          <p>Served on sourdough bread</p><br>
-        <h4>Soft-boiled with toast</h4>
-        <p>Choice of breads.<br>
-          £3.99 </p>
-        <h4>Scrambled</h4>
-        <p>Served with toast or your choice of avocado, bacon, ham or smoked salmon. <br>
-          £12.95 </p>
-        <h4>Shakshuka</h4>
-        <p>Poached eggs in a tomato sauce, with peppers and feta cheese and parsley, and
-          served with bread. <br>
-          £7.95 </p>
-      </div>
+  </div>
+  <!-- Next menu category -->
+  <div class="row d-flex justify-content-center">
+    <div class="col-10 pb-5 text-center">
+      <h2 class="text-center quicksand-font text-uppercase">Organic Eggs</h2>
+      <p>Served on sourdough bread</p><br>
+      <h4>Soft-boiled with toast</h4>
+      <p>Choice of breads.<br>
+        £3.99 </p>
+      <h4>Scrambled</h4>
+      <p>Served with toast or your choice of avocado, bacon, ham or smoked salmon. <br>
+        £12.95 </p>
+      <h4>Shakshuka</h4>
+      <p>Poached eggs in a tomato sauce, with peppers and feta cheese and parsley, and
+        served with bread. <br>
+        £7.95 </p>
     </div>
-    <div class="row d-flex justify-content-center">
-      <div class="col-10 pb-5 text-center">
-        <h2 class="text-center quicksand-font text-uppercase">Coffee, Juice & More</h4><br>
+  </div>
+  <!-- Next menu category -->
+  <div class="row d-flex justify-content-center">
+    <div class="col-10 pb-5 text-center">
+      <h2 class="text-center quicksand-font text-uppercase">Coffee, Juice & More</h4><br>
         <h4>Hot Drinks, £3.50</h4>
         <p>Expresso</p>
         <p>Cafe au Lait</p>
@@ -85,8 +92,7 @@
         <p>Carrot and Ginger</p>
         <p>Fresh Lemonade</p><br>
         <h4>Sparkling Water, £2.95/£4.95</h4>
-      </div>
     </div>
-    
-
-  {% endblock %}
+  </div>
+</div>
+{% endblock %}
