--- a/menus/templates/menus/menus.html
+++ b/menus/templates/menus/menus.html
@@ -12,7 +12,8 @@
     <!-- Breakfast menu card -->
     <div class="col">
       <div class="card">
-        <img src="https://res.cloudinary.com/ds4ukszsx/image/upload/v1674482088/static/images/brunch.b24424350291.webp" class="card-img-top"
+        <img src="https://res.cloudinary.com/ds4ukszsx/image/upload/v1674482088/static/images/brunch.b24424350291.webp"
+          class="card-img-top"
           alt="A close-up view of a table with breakfast, including eggs, bread and a cheese board.">
         <div class="card-body">
           <h5 class="card-title text-center">Breakfast</h5>
@@ -26,8 +27,8 @@
     <!-- Lunch menu card -->
     <div class="col">
       <div class="card">
-        <img src="https://res.cloudinary.com/ds4ukszsx/image/upload/v1674482088/static/images/lunch.7af9ff3320ec.webp" class="card-img-top"
-          alt="A waiter serving lunch appetizers.">
+        <img src="https://res.cloudinary.com/ds4ukszsx/image/upload/v1674482088/static/images/lunch.7af9ff3320ec.webp"
+          class="card-img-top" alt="A waiter serving lunch appetizers.">
         <div class="card-body">
           <h5 class="card-title text-center">Lunch</h5>
           <p class="card-text">Choose from our plat du jour, soups, salads or specialty "choucroute."</p>
@@ -40,8 +41,8 @@
     <!-- Dinner menu card -->
     <div class="col">
       <div class="card">
-        <img src="https://res.cloudinary.com/ds4ukszsx/image/upload/v1674482089/static/images/dinner.219fa9d437e9.webp" class="card-img-top"
-          alt="A woman holding a wine glass at a dinner table in a restaurant.">
+        <img src="https://res.cloudinary.com/ds4ukszsx/image/upload/v1674482089/static/images/dinner.219fa9d437e9.webp"
+          class="card-img-top" alt="A woman holding a wine glass at a dinner table in a restaurant.">
         <div class="card-body">
           <h5 class="card-title text-center">Dinner</h5>
           <p class="card-text">Linger over our fine wines, gourmet dishs and rustic family favorites.</p>
