--- a/menus/templates/menus/lunch.html
+++ b/menus/templates/menus/lunch.html
@@ -3,85 +3,87 @@
 {% block content %}
 
 <div class="container menu-page">
-    <div class="row d-flex justify-content-center">
-      <div class="col-10 pb-5 text-center">
-        <h1 class="quicksand-font header text-uppercase">Lunch</h1>
-        <p class="text-center">Served from 12:00 - 16:00 daily.<br>
-          Remember to check out our <a href="{% url 'breakfast' %}">breakfast</a> and <a href="{% url 'dinner' %}">dinner</a> menus.</p>
-        <hr>
-      </div>
+  <div class="row d-flex justify-content-center">
+    <div class="col-10 pb-5 text-center">
+      <h1 class="quicksand-font header text-uppercase">Lunch</h1>
+      <p class="text-center">Served from 12:00 - 16:00 daily.<br>
+        Remember to check out our <a href="{% url 'breakfast' %}">breakfast</a> and <a
+          href="{% url 'dinner' %}">dinner</a> menus.</p>
+      <hr>
+    </div>
+  </div>
+  <div class="row d-flex justify-content-center">
+    <div class="col-10 pb-5 text-center">
+      <h2 class="text-center quicksand-font text-uppercase">Plat du Jour</h2>
+      <p>The plate of the day, with our house wine, is based on the best available, seasonal ingredients from the
+        markets,
+        which is why we need to update this daily. Choose between meat, fish or vegetarian and
+        vegan options. We post our Plats du Jour every morning on our social media channels.<br>
+        £19.95 </p>
+    </div>
+  </div>
+  <div class="row d-flex justify-content-center">
+    <div class="col-10 pb-5 text-center">
+      <h2 class="text-center quicksand-font text-uppercase">Soups</h2>
+      <p>Serverd with a side salad and selection of breads.</p><br>
+      <h4>Creamed Cauliflower Soup</h4>
+      <p>£7.95</p>
+      <h4>Leek & Potato Soup</h4>
+      <p>£7.95</p>
+      <h4>French Onion Soup</h4>
+      <p>£9.50 </p>
+    </div>
+  </div>
+  <div class="row d-flex justify-content-center">
+    <div class="col-10 pb-5 text-center">
+      <h2 class="text-center quicksand-font text-uppercase">Salads</h2>
+      <p>Served with your choice of bread</p><br>
+      <h4>Salade Nicoise</h4>
+      <p>£12.95 </p>
+      <h4>Endive, Roqufort & Walnut Salad</h4>
+      <p>£12.95</p>
+      <h4>Beetroot & Goat's Cheese Salad</h4>
+      <p>£7.95 </p>
+    </div>
+  </div>
+  <div class="row d-flex justify-content-center">
+    <div class="col-10 pb-5 text-center">
+      <h2 class="text-center quicksand-font text-uppercase">Choucroute</h2>
+      <p>Served with your choice of bread</p><br>
+      <h4>Alsacienne</h4>
+      <p>with cured, smoked belly of pork and franfurter <br>
+        £12.95</p>
+      <h4>Alsacienne "Plaisir"</h4>
+      <p>the Alsacienne with ham hock and garlic sausage <br>
+        £12.95</p>
+      <h4>Royale</h4>
+      <p>the Alsacienne with Morteau sausage and pork chop <br>
+        £7.95 </p>
+    </div>
+  </div>
+  <div class="row d-flex justify-content-center">
+    <div class="col-10 pb-5 text-center">
+      <h2 class="text-center quicksand-font text-uppercase">Desserts</h2><br>
+      <h4>Cafe & Gateau</h4>
+      <p>Your choice of coffee and a slice of one of our cakes made daily.<br>
+        £9.95 </p>
+      <h4>Cheese Board</h4>
+      <p>Choose 3 cheeses from our wide selection, served with bread selection. <br>
+        £10.95 </p>
+      <h4>Shakshuka</h4>
+    </div>
+  </div>
+  <div class="row d-flex justify-content-center">
+    <div class="col-10 pb-5 text-center">
+      <h2 class="text-center quicksand-font text-uppercase">Wine, Cocktails, Aperitifs and Digestifs</h2><br>
+      <p>We have an extensive list of wines, beers, cocktails and spirits. Please see our drinks menu
+        when you visit. Check out our social media channels for news and tasting notes from our
+        sommelier.
+      </p>
     </div>
     <div class="row d-flex justify-content-center">
       <div class="col-10 pb-5 text-center">
-        <h2 class="text-center quicksand-font text-uppercase">Plat du Jour</h4>
-        <p>The plate of the day, with our house wine, is based on the best available, seasonal ingredients from the markets, 
-            which is why we need to update this daily. Choose between meat, fish or vegetarian and 
-            vegan options. We post our Plats du Jour every morning on our social media channels.<br>
-          £19.95 </p>
-      </div>
-    </div>
-    <div class="row d-flex justify-content-center">
-      <div class="col-10 pb-5 text-center">
-        <h2 class="text-center quicksand-font text-uppercase">Soups</h4>
-          <p>Serverd with a side salad and selection of breads.</p><br>
-        <h4>Creamed Cauliflower Soup</h4>
-        <p>£7.95</p>
-        <h4>Leek & Potato Soup</h4>
-        <p>£7.95</p>
-        <h4>French Onion Soup</h4>
-        <p>£9.50 </p>
-      </div>
-    </div>
-    <div class="row d-flex justify-content-center">
-      <div class="col-10 pb-5 text-center">
-        <h2 class="text-center quicksand-font text-uppercase">Salads</h4>
-          <p>Served with your choice of bread</p><br>
-        <h4>Salade Nicoise</h4>
-        <p>£12.95 </p>
-        <h4>Endive, Roqufort & Walnut Salad</h4>
-        <p>£12.95</p>
-        <h4>Beetroot & Goat's Cheese Salad</h4>
-        <p>£7.95 </p>
-      </div>
-    </div>
-    <div class="row d-flex justify-content-center">
-        <div class="col-10 pb-5 text-center">
-          <h2 class="text-center quicksand-font text-uppercase">Choucroute</h2>
-            <p>Served with your choice of bread</p><br>
-          <h4>Alsacienne</h4>
-          <p>with cured, smoked belly of pork and franfurter <br>
-            £12.95</p>
-          <h4>Alsacienne "Plaisir"</h4>
-          <p>the Alsacienne with ham hock and garlic sausage <br>
-            £12.95</p>
-          <h4>Royale</h4>
-          <p>the Alsacienne with Morteau sausage and pork chop <br>
-            £7.95 </p>
-        </div>
-      </div>
-    <div class="row d-flex justify-content-center">
-      <div class="col-10 pb-5 text-center">
-        <h2 class="text-center quicksand-font text-uppercase">Desserts</h4><br>
-        <h4>Cafe & Gateau</h4>
-        <p>Your choice of coffee and a slice of one of our cakes made daily.<br>
-          £9.95 </p>
-        <h4>Cheese Board</h4>
-        <p>Choose 3 cheeses from our wide selection, served with bread selection. <br>
-          £10.95 </p>
-        <h4>Shakshuka</h4>
-      </div>
-    </div>
-    <div class="row d-flex justify-content-center">
-        <div class="col-10 pb-5 text-center">
-          <h2 class="text-center quicksand-font text-uppercase">Wine, Cocktails, Aperitifs and Digestifs</h4><br>
-          <p>We have an extensive list of wines, beers, cocktails and spirits. Please see our drinks menu
-            when you visit. Check out our social media channels for news and tasting notes from our 
-            sommelier.
-          </p>
-        </div>
-    <div class="row d-flex justify-content-center">
-      <div class="col-10 pb-5 text-center">
-        <h2 class="text-center quicksand-font text-uppercase">Coffee, Juice & More</h4><br>
+        <h2 class="text-center quicksand-font text-uppercase">Coffee, Juice & More</h2><br>
         <h4>Hot Drinks, £3.50</h4>
         <p>Expresso</p>
         <p>Cafe au Lait</p>
@@ -95,10 +97,9 @@
         <p>Fresh Lemonade</p><br>
         <h4>Sparkling Water and Soft Drinks £2.95</h4>
         <p>We have a full range of soft drinks and a selection of sparkling waters.
-            Please refer to the drinks menu.
+          Please refer to the drinks menu.
         </p>
       </div>
     </div>
-    
-
+  </div>
   {% endblock %}
