--- a/templates/base.html
+++ b/templates/base.html
@@ -5,6 +5,9 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Avec Plaisir is London restaurant offering authentic French food.">
+    <meta name="keywords"
+        content="French restaurant, brasserie, French restaurants in central London, open daily, traditional French Food">
     <title>Avec Plaisir</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
@@ -40,10 +43,10 @@
                         <span class="nav-colors">Home</span></a>
                 </li>
                 <li class="dropdown-item"><a class="nav-link" href="{% url 'menus' %}">
-                    <span class="nav-colors">Menus</span></a>
+                        <span class="nav-colors">Menus</span></a>
                 </li>
                 <li class="dropdown-item"><a class="nav-link" href="{% url 'create_reservation' %}">
-                    <span class="nav-colors">Book a Table</span></a>
+                        <span class="nav-colors">Book a Table</span></a>
                 </li>
                 {% if user.is_authenticated %}
                 <li class="dropdown-item"><a class="nav-link" href="{% url 'view_reservations' %}"><span
@@ -94,8 +97,8 @@
             </a>
         </div>
         <div class="mb-4 d-flex flex-wrap justify-content-center">
-            <a class="m-1 d-block footer-two" href="https://goo.gl/maps/WZmoB6TjqAw6aZYA8" target="_blank" rel="noopener"
-                aria-label="Find us on Google maps (opens in a new tab)">
+            <a class="m-1 d-block footer-two" href="https://goo.gl/maps/WZmoB6TjqAw6aZYA8" target="_blank"
+                rel="noopener" aria-label="Find us on Google maps (opens in a new tab)">
                 <span class="mr-2 footer-two"><i class="fas fa-map-pin"></i> Charlotte Street, London, W1</span></a>
             <a class="m-1 d-block footer-two " href="tel:02071234567" target="_blank" rel="noopener"
                 aria-label="Call us on 02071234567">
@@ -127,7 +130,7 @@
     </script>
 
     <!-- script for active class -->
-    
+
     <script>
         $(document).ready(function () {
             var path = window.location.pathname;
