--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Allura&family=Lato&display=swap');
 
-/* 1. Base.html page and common to all pages */
+/* Base.html page and common to all pages */
 
 body {
     background-color: #645132;
@@ -18,7 +18,23 @@ a {
 a:hover {
     color:#efd485;
 }
-/* 2. navbar */
+
+.btn {
+    margin-top: 20px;
+    color: #efd485;
+    border-color: #efd485;
+    background-color: #6c5736;
+}
+
+h1, h2, h3, h4, p {
+    color: #efd485;
+}
+
+h2 {
+    font-size: 30px;
+}
+
+/* Navbar */
 .navbar {
     z-index: 10;
     color: #efd485;
@@ -35,12 +51,11 @@ a:hover {
     padding-left: 20px;
 }
 
-/* 3. hero image and text overlay */
+/* Hero image and text overlay */
 #logo-text {
     font-family: 'Allura', cursive;
     font-size: 80px;
 }
-
 
 .hero-image {
     z-index: 2;
@@ -68,23 +83,15 @@ a:hover {
 .cover-text-inner {
     text-align: center;
 }
-h1, h2, h3, h4, p, q  {
-    color: #efd485;
+
+/* Index.html wine and quotes */
+
+.wine-img {
+    max-width:80%; 
 }
 
-h2 {
-    font-size: 30px;
-}
-
-.btn {
-    margin-top: 20px;
-    color: #efd485;
-    border-color: #efd485;
-    background-color: #6c5736;
-}
-
-.card p {
-    color: black;
+.quotes {
+    font-size: 16px;
 }
 
 form {
@@ -107,14 +114,17 @@ a .footer-font {
     color:#efd485;
 }
 
-/* 5. menus.html page */
+/* Menu pages */
+
+.menu-page {
+    max-width: 600px;
+}
 
 .menus {
     padding-top: 20px;
     display: flex;
     justify-content: center;
 }
-
 
 .card {
     background: #efd485;
@@ -125,23 +135,16 @@ p.card-text {
     color: black;
 }
 
-#customForm {
-    background-color: #efd485;
-}
-
-
-.wine-img {
-    max-width:80%; 
-}
-
-.quotes {
-    font-size: 16px;
-}
+/* Reservation form and My Reservations page */
 
 form {
     max-width: 600px;
 } 
 
-.menu-page {
-    max-width: 600px;
+.card p {
+    color: black;
 }
+
+/* #customForm {
+    background-color: #efd485;
+} */
