Resize breakfast image for faster page load

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -98,7 +98,7 @@ form {
     color: #efd485;
 }
 
-/*  4. Footer */
+/* Footer */
 footer {
     border-top: 1px solid #efd485;
     color: #efd485;
