--- a/templates/base.html
+++ b/templates/base.html
@@ -49,7 +49,7 @@
                 <li class="dropdown-item"><a class="nav-link" href="{% url 'view_reservations' %}">My Reservations</a></li>
                 <li class="dropdown-item"><a class="nav-link" href="{% url 'account_logout' %}">Sign out</a></li>
                 {% else %}
-                <li class="dropdown-item"><a class="nav-link" href="{% url 'account_signup' %}">Sign Up</li>
+                <li class="dropdown-item"><a class="nav-link" href="{% url 'account_signup' %}">Sign Up</a></li>
                 <li class="dropdown-item"><a class="nav-link" href="{% url 'account_login' %}">Sign In</a></li>
                 {% endif %}
                 {% if user.is_staff %}
